--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-portfolio-website",
-  "homepage": "https://waynium/github.io/Portfolio-Website",
+  "homepage": "https://waynium.github.io/Portfolio-Website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
