--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "portfolio-website",
-  "homepage": "https://waynium.github.io/Portfolio-Website",
+  "name": "react-portfolio-website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-quotes-slider": "^1.0.1",
     "react-scripts": "5.0.1",
     "react-vertical-timeline-component": "^3.5.2",
     "web-vitals": "^2.1.4"
